--- a/ATLA Test.ipynb
+++ b/ATLA Test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests, urllib, numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
+    "import requests, urllib, numpy as np, pandas as pd, matplotlib.pyplot as plt, seaborn as\n",
     "from bs4 import BeautifulSoup\n",
     "import time"
    ]
