--- a/Energy Savings_ Python Certification/Singapore Recycling Energy Savings.ipynb
+++ b/Energy Savings_ Python Certification/Singapore Recycling Energy Savings.ipynb
@@ -37,18 +37,13 @@
     "    <li><b>Year: </b>The recycling year.</li>\n",
     "</ul>\n",
     "    </div>\n",
-    "<div style=\"background-color: #efebe4; color: #05192d; text-align:left; vertical-align: middle;  line-height: 1.6; margin-top: 17px;\">\n",
+    "<div style=\"background-color: #efebe4; color: #05192d; text-align:left; vertical-align: middle; padding: 15px 25px 15px 25px; line-height: 1.6; margin-top: 17px;\">\n",
     "    <div style=\"font-size:16px\"><b>datasets/energy_saved.csv -  Estimations of the amount of energy saved per waste type in kWh</b>\n",
     "    </div>\n",
     "<ul>\n",
     "    <li><b>material: </b>The type of waste recycled.</li>\n",
     "    <li><b>energy_saved: </b>An estimate of the energy saved (in kiloWatt hour) by recycling a metric tonne of waste.</li> \n",
-    "    <li><b>crude_oil_saved: </b>An estimate of the number of barrels of oil saved by recycling a metric tonne of waste.</li>\n",
-    "</ul>\n",
-    "\n",
-    "</div>\n",
-    "<pre><code>\n",
-    "</code></pre>"
+    "    <li><b>crude_oil_saved: </b>An estimate of the number of barrels of oil saved by recycling a metric tonne of waste.</li>"
    ]
   },
   {
