--- a/Energy Savings_ Python Certification/Singapore Recycling Energy Savings.ipynb
+++ b/Energy Savings_ Python Certification/Singapore Recycling Energy Savings.ipynb
@@ -43,9 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "dc": {
      "key": "4"
     },
@@ -56,13 +55,16 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "waste03 = pd.read_csv(\"datasets/wastestats.csv\")\n",
     "waste18 = pd.read_csv(\"datasets/2018_2019_waste.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {
     "dc": {
      "key": "4"
@@ -77,9 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "dc": {
      "key": "4"
     }
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {
     "dc": {
      "key": "4"
@@ -132,7 +133,7 @@
        " 'wood/timber'}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,9 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "dc": {
      "key": "4"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {
     "dc": {
      "key": "4"
@@ -204,28 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "dc": {
      "key": "4"
     }
-   },
-   "outputs": [],
-   "source": [
-    "energy_saved = pd.read_csv(\"datasets/energy_saved.csv\", header=3, index_col=0)\n",
-    "energy_saved.columns = energy_saved.columns.str.lower()\n",
-    "energy_saved.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {
-    "dc": {
-     "key": "4"
-    },
-    "scrolled": true
    },
    "outputs": [
     {
@@ -255,27 +238,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>plastic</th>\n",
+       "      <td>plastic</td>\n",
        "      <td>5774 Kwh</td>\n",
        "      <td>16 barrels</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>glass</th>\n",
+       "      <td>glass</td>\n",
        "      <td>42 Kwh</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ferrous metal</th>\n",
+       "      <td>ferrous metal</td>\n",
        "      <td>642 Kwh</td>\n",
        "      <td>1.8 barrels</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>non-ferrous metal</th>\n",
+       "      <td>non-ferrous metal</td>\n",
        "      <td>14000 Kwh</td>\n",
        "      <td>40 barrels</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>paper</th>\n",
+       "      <td>paper</td>\n",
        "      <td>4000 kWh</td>\n",
        "      <td>1.7 barrels</td>\n",
        "    </tr>\n",
@@ -292,16 +275,20 @@
        "paper                 4000 kWh     1.7 barrels"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "energy_saved = pd.read_csv(\"datasets/energy_saved.csv\", header=3, index_col=0)\n",
+    "energy_saved.columns = energy_saved.columns.str.lower()\n",
+    "energy_saved.T"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {
     "dc": {
      "key": "4"
@@ -319,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {
     "dc": {
      "key": "4"
@@ -334,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {
     "dc": {
      "key": "4"
@@ -350,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "dc": {
      "key": "4"
@@ -358,27 +345,75 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'annual_energy_savings' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-00acdd1d2e57>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mannual_energy_savings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'annual_energy_savings' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_energy_saved</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2015</td>\n",
+       "      <td>3.435929e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2016</td>\n",
+       "      <td>2.554433e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2017</td>\n",
+       "      <td>2.470596e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2018</td>\n",
+       "      <td>2.698130e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2019</td>\n",
+       "      <td>2.765440e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      total_energy_saved\n",
+       "year                    \n",
+       "2015        3.435929e+09\n",
+       "2016        2.554433e+09\n",
+       "2017        2.470596e+09\n",
+       "2018        2.698130e+09\n",
+       "2019        2.765440e+09"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "display(annual_energy_savings)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
